added hosted api

--- a/src/app/facilityhome/facilityhome.page.html
+++ b/src/app/facilityhome/facilityhome.page.html
@@ -22,7 +22,7 @@
   <ion-card>
     <ion-card-header>
       <ion-col>
-        <ion-card-title>{{ facilityName }}</ion-card-title>
+        <ion-card-title class="color">{{ facilityName }}</ion-card-title>
       </ion-col>
       <ion-col class="ion-text-end date-col">
         <ion-card-title>{{ currentDate | date: 'MMMM-yyyy' }}</ion-card-title>
