--- a/src/app/facilitystockreports/facilitystockreports.page.html
+++ b/src/app/facilitystockreports/facilitystockreports.page.html
@@ -26,7 +26,7 @@
       <ion-card-header>
         <ion-row class="align-center">
           <ion-col size="6"> 
-            <ion-card-title>{{ facilityName }}</ion-card-title>
+            <ion-card-title class="color1">{{ facilityName }}</ion-card-title>
           </ion-col>
           <ion-col size="6" class="ion-text-end"> 
             <div class="date-selectors">
