--- a/src/app/subhome/subhome.page.html
+++ b/src/app/subhome/subhome.page.html
@@ -39,7 +39,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-card-subtitle class="color">Displaying {{ selectedMonth }} - {{ selectedYear }}</ion-card-subtitle>
+          <ion-card-subtitle class="color1">Displaying {{ selectedMonth }} - {{ selectedYear }}</ion-card-subtitle>
         </ion-col>
       </ion-row>
     </ion-card-header>
