--- a/src/app/inventory-approval/inventory-approval.page.html
+++ b/src/app/inventory-approval/inventory-approval.page.html
@@ -1,4 +1,3 @@
-
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-title>Inventory Approval</ion-title>
@@ -28,7 +27,8 @@
       <ion-card-header>
         <ion-row>
           <ion-col class="ion-text-end date-col">
-            <ion-button class="print-exclude" (click)="printPage()" shape="round" size="small" class="print-button">Print</ion-button>
+            <ion-button class="print-exclude" (click)="printPage()" shape="round" size="small"
+              class="print-button">Print</ion-button>
           </ion-col>
         </ion-row>
 
@@ -46,11 +46,12 @@
       <div *ngFor="let drug of drugs" class="drug-container">
         <ion-card class="custom-card">
           <ion-card-content>
-            <h4 class="drug-name">{{ drug.drugName }}</h4> 
+            <h4 class="drug-name">{{ drug.drugName }}</h4>
             <table class="table">
               <tbody>
                 <tr>
-                  <td class="bold-text">Beginning balance: {{ drug.inventory.beginningBalance || '0' | number:'1.2-2' }}</td>
+                  <td class="bold-text">Beginning balance: {{ drug.inventory.beginningBalance || '0' | number:'1.2-2' }}
+                  </td>
                   <td>Months of Stock: {{ drug.inventory.monthsOfStock || '0' | number:'1.2-2' }}</td>
                 </tr>
                 <tr>
@@ -91,15 +92,29 @@
         </ion-card>
       </div>
     </ion-card>
-    
-    <ion-row>
+
+    <ion-row *ngIf="!isApproved">
       <ion-col>
-        <ion-button expand="full" color="success" class="print-exclude" (click)="approveInventory()">Approve</ion-button>
-      </ion-col>      
-      <ion-col>
-        <ion-button expand="full" color="danger" class="print-exclude">Reject</ion-button>
+        <ion-button 
+          expand="full" 
+          shape="round" 
+          class="tiba print-exclude" 
+          (click)="presentApprovalAlert()">
+          Approve
+        </ion-button>
       </ion-col>
-    </ion-row>    
+      <ion-col>
+        <ion-button 
+          expand="full" 
+          shape="round" 
+          color="primary" 
+          class="print-exclude">
+          Reject
+        </ion-button>
+      </ion-col>
+    </ion-row>
     
+
+
   </div>
 </ion-content>
