--- a/src/global.scss
+++ b/src/global.scss
@@ -221,45 +221,80 @@ ion-col {
 }
 
 ion-card-content {
-    padding: 8px !important; 
-  }
-  
-  ion-card {
-    margin-bottom: 8px !important; 
-  }
-  
-  ion-card-header {
-    padding: 8px !important; 
-    margin-bottom: 0 !important; 
-  }
-  
-  ion-card-title {
-    font-size: 14px !important; 
-    margin: 0 !important; 
-  }
-  
-  ion-list {
+    padding: 8px !important;
+}
+
+ion-card {
+    margin-bottom: 8px !important;
+}
+
+ion-card-header {
+    padding: 8px !important;
+    margin-bottom: 0 !important;
+}
+
+ion-card-title {
+    font-size: 14px !important;
+    margin: 0 !important;
+}
+
+ion-list {
     padding: 0 !important;
-  }
-  
-  ion-item {
-    padding: 4px 0 !important; 
-    --inner-padding: 0px !important; 
+}
+
+ion-item {
+    padding: 4px 0 !important;
+    --inner-padding: 0px !important;
     --min-height: 40px !important;
 }
-  
-  ion-label {
+
+ion-label {
     font-size: 12px !important;
-    margin: 0 !important; 
+    margin: 0 !important;
 }
-  
-  ion-progress-bar {
-    --height: 6px !important; 
-    margin: 4px 0 !important; 
-  }
-  
-  .reporting-rate-text {
+
+ion-progress-bar {
+    --height: 6px !important;
+    margin: 4px 0 !important;
+}
+
+.reporting-rate-text {
     font-size: 10px !important;
-    margin: 2px 0 !important; 
+    margin: 2px 0 !important;
+}
+
+ion-alert.custom-alert {
+    --backdrop-opacity: 0.7;
+}
+
+.custom-alert .alert-button-group {
+    padding: 8px;
+}
+
+button.alert-button.alert-button-confirm {
+    background-color: var(--ion-color-primary);
+    color: var(--ion-color-success-contrast);
+}
+
+.md button.alert-button.alert-button-confirm {
+    border-radius: 4px;
+}
+
+.ios .custom-alert button.alert-button {
+    border: 0.55px solid rgba(var(--ion-text-color-rgb, 0, 0, 0), 0.2);
+}
+
+.ios button.alert-button.alert-button-cancel {
+    border-right: 0;
+    border-bottom-left-radius: 13px;
+    border-top-left-radius: 13px;
+}
+
+.ios button.alert-button.alert-button-confirm {
+    border-bottom-right-radius: 13px;
+    border-top-right-radius: 13px;
+}
+ion-button {
+    --border-radius: 10px !important;
   }
   
