--- a/src/app/inventory-form/inventory-form.page.scss
+++ b/src/app/inventory-form/inventory-form.page.scss
@@ -45,7 +45,7 @@ ion-input, ion-textarea {
 }
 
 ion-textarea {
-  min-height: 120px; 
+  min-height: 30%; 
 }
 
 .save-button {
@@ -53,3 +53,9 @@ ion-textarea {
   --background: #1d434e;
   --border-radius: 6px;
 }
+.invalid {
+  border: 2px solid #9e1c25;
+  background-color: rgba(255, 0, 0, 0.1);
+}
+
+
