--- a/src/app/county/county.page.html
+++ b/src/app/county/county.page.html
@@ -25,12 +25,12 @@
         </ion-col>
         <ion-col size="6" class="ion-text-end">
           <div class="date-selectors">
-            <ion-select [(ngModel)]="selectedMonth" interface="popover">
+            <ion-select [(ngModel)]="selectedMonth" interface="popover" placeholder="Month" (ionChange)="onDateChange()">
               <ion-select-option *ngFor="let month of months" [value]="month">{{ month }}</ion-select-option>
             </ion-select>
-            <ion-select [(ngModel)]="selectedYear" interface="popover">
+            <ion-select [(ngModel)]="selectedYear" interface="popover" placeholder="Year" (ionChange)="onDateChange()">
               <ion-select-option *ngFor="let year of years" [value]="year">{{ year }}</ion-select-option>
-            </ion-select>
+            </ion-select>            
           </div>
         </ion-col>
       </ion-row>
@@ -58,17 +58,17 @@
     </ion-card-header>
     <ion-card-content>
       <ion-list>
-        <ion-item *ngFor="let programme of programmes">
-          <ion-label  (click)="navigateToProgrammeSummary(programme, subcounty)">
-            {{ programme.programmeName }}
-            <ion-progress-bar [value]="programme.reportingRate" [color]="getProgressBarColor(programme.reportingRate)">
-            </ion-progress-bar>
+        <ion-item *ngFor="let programme of subcounty.programmes">
+          <ion-label (click)="navigateToProgrammeSummary(programme, subcounty)">
+            <h2>{{ programme.programmeName }}</h2>
+            <ion-progress-bar [value]="programme.reportingRate / 100"></ion-progress-bar>
             <p [ngClass]="getStatusColor(programme.reportingRate)" class="reporting-rate-text" (click)="navigateToProgrammeSummary(programme, subcounty)">
-              Reporting Rate: {{ programme.reportingRate | percent }}
+              Reporting Rate: {{ programme.reportingRate | number: '1.0-2' }}%
             </p>
           </ion-label>
         </ion-item>
       </ion-list>
     </ion-card-content>
   </ion-card>
-</ion-content>
+  
+  
