--- a/src/app/nationalhome/nationalhome.page.html
+++ b/src/app/nationalhome/nationalhome.page.html
@@ -22,32 +22,36 @@
         </ion-col>
         <ion-col size="6" class="ion-text-end">
           <div class="date-selectors">
-            <ion-select placeholder="Select Month" [(ngModel)]="selectedMonth">
+            <ion-select [(ngModel)]="selectedMonth" interface="popover" placeholder="Month"
+              (ionChange)="onDateChange()">
               <ion-select-option *ngFor="let month of months" [value]="month">{{ month }}</ion-select-option>
             </ion-select>
-
-            <ion-select placeholder="Select Year" [(ngModel)]="selectedYear">
+            <ion-select [(ngModel)]="selectedYear" interface="popover" placeholder="Year" (ionChange)="onDateChange()">
               <ion-select-option *ngFor="let year of years" [value]="year">{{ year }}</ion-select-option>
             </ion-select>
           </div>
         </ion-col>
       </ion-row>
       <ion-row>
+        <!-- Display Current Month-Year -->
         <ion-col>
-          <ion-card-subtitle>Displaying {{ selectedMonth }} - {{ selectedYear }}</ion-card-subtitle>
+          <ion-card-subtitle class="color1">Displaying {{ selectedMonth }} - {{ selectedYear }}</ion-card-subtitle>
         </ion-col>
       </ion-row>
     </ion-card-header>
   </ion-card>
 
-  <!-- Search bar is directly included here -->
   <ion-card>
     <ion-card-header>
-      <ion-searchbar [(ngModel)]="searchQuery" (ionInput)="filterCounties()" placeholder="Search County"></ion-searchbar>
+      <ion-select [(ngModel)]="selectedCounty" placeholder="Choose a County" (ionChange)="onCountyChange($event)">
+        <ion-select-option *ngFor="let county of counties" [value]="county.countyId">
+          {{ county.countyName }}
+        </ion-select-option>
+      </ion-select>
     </ion-card-header>
   </ion-card>
-
-  <ion-card *ngFor="let county of filteredCounties">  
+  
+  <ion-card *ngFor="let county of filteredCounties">
     <ion-card-header>
       <ion-row>
         <ion-col>
@@ -61,11 +65,10 @@
       <ion-list>
         <ion-item *ngFor="let programme of county.programmes">
           <ion-label (click)="navigateToProgrammeSummary(programme, county)">
-            {{ programme.programmeName }}
-            <ion-progress-bar [value]="programme.reportingRate" [color]="getProgressBarColor(programme.reportingRate)">
-            </ion-progress-bar>
+            <h2>{{ programme.programmeName }}</h2>
+            <ion-progress-bar [value]="programme.reportingRate / 100"></ion-progress-bar>
             <p [ngClass]="getStatusColor(programme.reportingRate)" class="reporting-rate-text">
-              Reporting Rate: {{ programme.reportingRate | percent }}
+              Reporting Rate: {{ programme.reportingRate | number: '1.0-2' }}%
             </p>
           </ion-label>
         </ion-item>
@@ -73,3 +76,4 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
+  
