--- a/src/app/subhome/subhome.page.html
+++ b/src/app/subhome/subhome.page.html
@@ -2,71 +2,80 @@
   <ion-toolbar color="primary">
     <ion-title>Home</ion-title>
     <ion-buttons slot="end">
+      <!-- Search Button -->
       <ion-button (click)="toggleSearchBar()">
         <ion-icon name="search"></ion-icon>
       </ion-button>
+      <!-- Notifications Button -->
       <ion-button (click)="goToNotifications()">
         <ion-icon name="notifications-outline" class="notification-icon"></ion-icon>
         <span class="badge" *ngIf="newNotificationsCount > 0">{{ newNotificationsCount }}</span>
       </ion-button>
+      <!-- Menu Button -->
       <ion-button (click)="toggleMenu()">
         <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
+
+  <!-- Search Bar -->
   <ion-toolbar *ngIf="showSearchBar" color="light">
     <ion-searchbar [(ngModel)]="searchQuery" (ionInput)="filterProgrammes()"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <!-- Subcounty and Date Selectors -->
   <ion-card>
     <ion-card-header>
       <ion-row class="align-center">
-        <ion-col size="6"> 
-          <ion-card-title class="color">{{ subcounty }} </ion-card-title>
+        <!-- Subcounty Display -->
+        <ion-col size="6">
+          <ion-card-title class="color">{{ subcounty }}</ion-card-title>
         </ion-col>
-        <ion-col size="6" class="ion-text-end"> 
+        <!-- Date Selectors -->
+        <ion-col size="6" class="ion-text-end">
           <div class="date-selectors">
-            <ion-select [(ngModel)]="selectedMonth" interface="popover">
+            <ion-select [(ngModel)]="selectedMonth" interface="popover" placeholder="Month" (ionChange)="onDateChange()">
               <ion-select-option *ngFor="let month of months" [value]="month">{{ month }}</ion-select-option>
             </ion-select>
-            <ion-select [(ngModel)]="selectedYear" interface="popover">
+            <ion-select [(ngModel)]="selectedYear" interface="popover" placeholder="Year" (ionChange)="onDateChange()">
               <ion-select-option *ngFor="let year of years" [value]="year">{{ year }}</ion-select-option>
-            </ion-select>
+            </ion-select>            
           </div>
         </ion-col>
       </ion-row>
       <ion-row>
+        <!-- Display Current Month-Year -->
         <ion-col>
           <ion-card-subtitle class="color1">Displaying {{ selectedMonth }} - {{ selectedYear }}</ion-card-subtitle>
         </ion-col>
       </ion-row>
     </ion-card-header>
   </ion-card>
-  
-  <ion-card>
-    <ion-card-header>
-      <ion-row>
-        <ion-col>
-          <ion-card-title class="heading-bold">Programme</ion-card-title>
-        </ion-col>
-        <ion-col class="ion-text-end">
-        </ion-col>
-      </ion-row>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-list>
-        <ion-item *ngFor="let programme of filteredProgrammes">
-          <ion-label>
-            <h2  (click)="navigateToInventoryForm(programme)">{{ programme.programmeName }}</h2>
-            <ion-progress-bar [value]="programme.reportingRate"></ion-progress-bar>
-            <p [ngClass]="getStatusColor(programme.reportingRate)"   (click)="navigateToInventoryForm(programme)">
-              Reporting Rate: {{ programme.reportingRate | percent }}
-            </p>
-          </ion-label>
-        </ion-item>        
-      </ion-list>
-    </ion-card-content>
-  </ion-card>
-</ion-content>
+<ion-card>
+  <ion-card-header>
+    <ion-row>
+      <ion-col>
+        <ion-card-title class="heading-bold">Programmes</ion-card-title>
+      </ion-col>
+    </ion-row>
+  </ion-card-header>
+  <ion-card-content>
+    <ion-list>
+      <ion-item *ngFor="let programme of filteredProgrammes">
+        <ion-label>
+          <h2 class="programme-title" (click)="navigateToInventoryForm(programme)">
+            {{ programme.programmeName }}
+          </h2>
+          
+          <ion-progress-bar [value]="programme.reportingRate / 100"></ion-progress-bar>
+          
+          <p [ngClass]="getStatusColor(programme.reportingRate)" (click)="navigateToInventoryForm(programme)">
+            Reporting Rate: {{ programme.reportingRate | number: '1.0-2' }}%
+          </p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-card-content>
+</ion-card>
